++ Raw user input reflected in response message fix